# Jiradoro

./: .gitignore  Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/messages/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  longrunner.rs  main.rs
frontend/src/components/: heartbeat.rs  mod.rs  profile.rs  timer_controls.rs  timer_display.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: longrunner.rs  main.rs
