[package]
edition = "2021"
name = "jiradoro-gui"
version = "0.1.0"

[dependencies]
gloo-timers = "0.3.0"
js-sys = "0.3.69"
serde = {version = "1.0.203", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

# The frontend framework
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
yew-feather = "1.0.0"
yew-hooks = "0.3.2"

# Logging to file and console
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
