[package]
edition = "2021"
name = "jiradoro-gui"
version = "0.1.0"

[dependencies]
gloo = "0.11.0"
gloo-timers = "0.3.0"
js-sys = "0.3.70"
serde = {version = "1.0.208", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# The frontend framework
yew = {version = "0.21", features = ["csr"]}
yew-feather = "1.0.0"
yew-hooks = "0.3.2"

# Logging to file and console
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"

# Unique identifiers
uuid = {version = "1.9.1", features = ["v4", "serde"]}

# Internal libraries
jiradoro-common = {path = "../common"}
