[package]
authors = ["you"]
default-run = "jiradoro-app"
description = "A pomodoro implementation for logging work to Jira"
edition = "2021"
license = ""
name = "jiradoro-app"
repository = ""
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5.0", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.5.2", features = ["system-tray"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

# Logging to file and console
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
