[package]
authors = ["you"]
default-run = "jiradoro-app"
description = "A pomodoro implementation for logging work to Jira"
edition = "2021"
license = ""
name = "jiradoro-app"
repository = ""
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.0.0-rc", features = [] }

[dependencies]
serde = {version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tauri = {version = "2.0.0-rc", features = ["tray-icon"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# Logging to file and console
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

uuid = {version = "1.10.0", features = ["v4", "serde"] }

# Async code
futures = {version = "0.3.30"}
tokio = {version = "1.39.3", features = ["full"] }
tokio-rustls = "0.26.0"

# Internal libraries
jiradoro-common = {path = "../common"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
